; ModuleID = '/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_fontdef_tt.c_UINT16Swap.c'
source_filename = "/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_fontdef_tt.c_UINT16Swap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @UINT16Swap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @UINT16Swap(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca [2 x i64], align 16
  store i32* %0, i32** %2, align 8
  %4 = getelementptr inbounds [2 x i64], [2 x i64]* %3, i64 0, i64 0
  %5 = load i32*, i32** %2, align 8
  %6 = bitcast i32* %5 to i64*
  %7 = call i32 @HPDF_MemCpy(i64* %4, i64* %6, i32 2)
  %8 = getelementptr inbounds [2 x i64], [2 x i64]* %3, i64 0, i64 0
  %9 = load i64, i64* %8, align 16
  %10 = trunc i64 %9 to i32
  %11 = shl i32 %10, 8
  %12 = getelementptr inbounds [2 x i64], [2 x i64]* %3, i64 0, i64 1
  %13 = load i64, i64* %12, align 8
  %14 = trunc i64 %13 to i32
  %15 = or i32 %11, %14
  %16 = load i32*, i32** %2, align 8
  store i32 %15, i32* %16, align 4
  ret void
}

declare dso_local i32 @HPDF_MemCpy(i64*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
